# age-of-dota

./: .gitignore  CMakeLists.txt  client_script.cmake  client_ui.cmake  common.cmake  common_client.cmake  server.cmake  ui_lib.cmake
ai/: evaluate_policy.py  run_ai.py  run_repeatedly.py  test_evaluate_policy.py  train_actor.py  train_critic.py  train_simplified_actor.py  train_value.py  training_common.py
ai/app/: assignment.py  client_application.py  connect.py  encoding_limits.py  game_loop.py  game_state.py  json_parser.py  lobby_loop.py  logger.py  network.py  record_manager.py
ai/tf_copied_code/: actor_critic.py  advantage_actor_critic.py  aim_env.py  fake_env.py  model_io.py  simple_architectures.py
ai/tf_nueral_network/: evaluate_policy.py  nn_building_common.py  policy_function.py  set_memory.py  simple_critic.py  train_actor.py  train_critic.py  train_value_function.py  value_function.py
settings/: client_settings.json  server_settings.json
src/both/app/: run_both.cpp  run_spectator_client.cpp  run_spectator_client.h  test_stuff.cpp
src/client_script/: AiGroup.cpp  AiGroup.h  RandomMovementAiGroup.cpp  RandomMovementAiGroup.h  ScriptAi.cpp  ScriptAi.h  ScriptClientContext.cpp  ScriptClientContext.h  handle_game_messages.cpp  handle_game_messages.h  navigate_lobby.cpp  navigate_lobby.h  run_script_ai.cpp  run_script_ai.h  script_client.cpp
ui/: QtUiLib.pro
ui/src/: gamehandler.h  gamewindow.cpp  gamewindow.h  gamewindow.ui  gamewindowadapter.cpp  gamewindowadapter.h  lobbybrowser.cpp  lobbybrowser.h  lobbybrowser.ui  lobbybrowserconnection.cpp  lobbybrowserconnection.h  lobbybrowserhandler.cpp  lobbybrowserhandler.h  main.cpp  mocklobbybrowserhandler.cpp  mocklobbybrowserhandler.h  playeroptions.cpp  playeroptions.h  playeroptions.ui
(+197 files in other folders)
